# swagger-output.json
@@ -7,21 +7,26 @@
   },
   "host": "duck-directory-api.onrender.com",
   "basePath": "/",
-  "schemes": [
-    "http",
-    "https"
-  ],
+  "schemes": ["http", "https"],
   "paths": {
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
     "/ducks/": {
       "get": {
         "description": "",
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -29,9 +34,7 @@
     "/ducks/new": {
       "post": {
         "description": "",
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [
           {
             "name": "body",
@@ -61,10 +64,10 @@
                   "example": "any"
                 },
                 "features": {
-                  "example": "any"
+                  "example": "array"
                 },
                 "accessories": {
-                  "example": "any"
+                  "example": "array"
                 },
                 "fun_fact": {
                   "example": "any"
@@ -76,6 +79,101 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/ducks/update/{id}": {
+      "put": {
+        "description": "",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "full_name": {
+                  "example": "any"
+                },
+                "color": {
+                  "example": "any"
+                },
+                "job": {
+                  "example": "any"
+                },
+                "size": {
+                  "example": "any"
+                },
+                "material": {
+                  "example": "any"
+                },
+                "weight": {
+                  "example": "any"
+                },
+                "floatability": {
+                  "example": "any"
+                },
+                "features": {
+                  "example": "array"
+                },
+                "accessories": {
+                  "example": "array"
+                },
+                "fun_fact": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/ducks/delete/{id}": {
+      "delete": {
+        "description": "",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
